--- a/Admin-Dashboard-Template-Bootstrap/Stock.html
+++ b/Admin-Dashboard-Template-Bootstrap/Stock.html
@@ -89,9 +89,9 @@ position:absolute;
         <a href="Dashboard" class="list-group-item list-group-item-action waves-effect">
           <i class="fas fa-chart-pie mr-3"></i>Dashboard
         </a>
-		<a href="Stock" class="list-group-item list-group-item-action waves-effect">
+		<a href="Stock" class="list-group-item active waves-effect">
           <i class="fas fa-map mr-3"></i>Stock</a>
-        <a href="History" class="list-group-item active waves-effect">
+        <a href="History" class="list-group-item list-group-item-action waves-effect">
           <i class="fas fa-history mr-3"></i>History</a>
         <!-- <a href="#" class="list-group-item list-group-item-action waves-effect">
           <i class="fas fa-user mr-3"></i>Profile</a>
@@ -119,7 +119,7 @@ position:absolute;
           <h4 class="mb-2 mb-sm-0 pt-1">
             <span style="color:#007bff;" >Home Page</span>
             <span>/</span>
-            <span>History</span>
+            <span>Stock</span>
           </h4>
         </div>
 
@@ -137,40 +137,28 @@ position:absolute;
 
             <!-- Card header -->
             <div class="card-header text-center">
-              History <strong>555</strong>
+              Stock <strong>555</strong>
             </div>
 
             <!--Card content-->
-            <div class="card-body">
-				<div class="list-group list-group-flush">
-                <a class="list-group-item list-group-item-action waves-effect">sales
-                  <span class="badge badge-success badge-pill pull-right">22%
-                    <i class="fas fa-arrow-up ml-1"></i>
-                  </span>
-                </a>
-                <a class="list-group-item list-group-item-action waves-effect">traffic
-                  <span class="badge badge-danger badge-pill pull-right">5%
-                    <i class="fas fa-arrow-down ml-1"></i>
-                  </span>
-                </a>
-                <a class="list-group-item list-group-item-action waves-effect">orders
-                  <span class="badge badge-primary badge-pill pull-right">14</span>
-                </a>
-                <a class="list-group-item list-group-item-action waves-effect">issues
-                  <span class="badge badge-primary badge-pill pull-right">123</span>
-                </a>
-                <a class="list-group-item list-group-item-action waves-effect">messages
-                  <span class="badge badge-primary badge-pill pull-right">8</span>
-                </a>
-				<a class="list-group-item list-group-item-action waves-effect">orders
-                  <span class="badge badge-primary badge-pill pull-right">14</span>
-                </a>
-                <a class="list-group-item list-group-item-action waves-effect">issues
-                  <span class="badge badge-primary badge-pill pull-right">123</span>
-                </a>
-                <a class="list-group-item list-group-item-action waves-effect">messages
-                  <span class="badge badge-primary badge-pill pull-right">8</span>
-                </a>
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+</div>
               </div>
 
             </div>
@@ -220,71 +208,6 @@ position:absolute;
   <script type="text/javascript">
     // Animations initialization
     new WOW().init();
-
-  </script>
-
-  <!-- Charts -->
-  <script>
-    // Line
-    var ctx = document.getElementById("myChart").getContext('2d');
-    var myChart = new Chart(ctx, {
-      type: 'bar',
-      data: {
-        labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
-        datasets: [{
-          label: '# of Votes',
-          data: [12, 19, 3, 5, 2, 3],
-          backgroundColor: [
-            'rgba(255, 99, 132, 0.2)',
-            'rgba(54, 162, 235, 0.2)',
-            'rgba(255, 206, 86, 0.2)',
-            'rgba(75, 192, 192, 0.2)',
-            'rgba(153, 102, 255, 0.2)',
-            'rgba(255, 159, 64, 0.2)'
-          ],
-          borderColor: [
-            'rgba(255,99,132,1)',
-            'rgba(54, 162, 235, 1)',
-            'rgba(255, 206, 86, 1)',
-            'rgba(75, 192, 192, 1)',
-            'rgba(153, 102, 255, 1)',
-            'rgba(255, 159, 64, 1)'
-          ],
-          borderWidth: 1
-        }]
-      },
-      options: {
-        scales: {
-          yAxes: [{
-            ticks: {
-              beginAtZero: true
-            }
-          }]
-        }
-      }
-    });
-
-    //pie
-    var ctxP = document.getElementById("pieChart").getContext('2d');
-    var myPieChart = new Chart(ctxP, {
-      type: 'pie',
-      data: {
-        labels: ["Red", "Green", "Yellow", "Grey", "Dark Grey"],
-        datasets: [{
-          data: [300, 50, 100, 40, 120],
-          backgroundColor: ["#F7464A", "#46BFBD", "#FDB45C", "#949FB1", "#4D5360"],
-          hoverBackgroundColor: ["#FF5A5E", "#5AD3D1", "#FFC870", "#A8B3C5", "#616774"]
-        }]
-      },
-      options: {
-        responsive: true,
-        legend: false
-      }
-    });
-
-
-
-  </script>
 
   </script>
 </body>
